言語変数名の変更

--- a/locales/en-US.resx
+++ b/locales/en-US.resx
@@ -1,64 +1,4 @@
 <root>
-  <data name="translate">
-    <value>translate</value>
-  </data>
-  <data name="delete">
-    <value>delete</value>
-  </data>
-  <data name="language">
-    <value>Language</value>
-  </data>
-  <data name="All">
-    <value>all</value>
-  </data>
-  <data name="Help">
-    <value>help</value>
-  </data>
-  <data name="Ping">
-    <value>ping</value>
-  </data>
-  <data name="Invite">
-    <value>invite</value>
-  </data>
-  <data name="Support">
-    <value>support</value>
-  </data>
-  <data name="Settings">
-    <value>settings</value>
-  </data>
-  <data name="Disable">
-    <value>disable</value>
-  </data>
-  <data name="BanWard">
-    <value>BAN Word</value>
-  </data>
-  <data name="User">
-    <value>user</value>
-  </data>
-  <data name="Channel">
-    <value>channel</value>
-  </data>
-  <data name="Role">
-    <value>role</value>
-  </data>
-  <data name="Word">
-    <value>word</value>
-  </data>
-  <data name="DefaultLanguage">
-    <value>default language</value>
-  </data>
-  <data name="FinishAction">
-    <value>Finished action.</value>
-  </data>
-  <data name="show_Embed_img">
-    <value>Show media in embeds image</value>
-  </data>
-  <data name="show_mediaFiles">
-    <value>Show media as attachments</value>
-  </data>
-  <data name="show_helpMessage">
-    <value>Shows help message.</value>
-  </data>
   <data name="Help_script">
     <value>No special setup is required, just post the tweet link.
 
@@ -74,223 +14,271 @@ If you do not trust us, you can secure your safety by removing your channel perm
 `/support` - Join support server!
 `/settings` - chenge Settings</value>
   </data>
-  <data name="settings_Disable_ch_user">
-    <value>Disable by user or channel.</value>
+  <data name="translate">
+    <value>translate</value>
   </data>
-  <data name="settings_Add_remove_BANWords">
-    <value>Add or remove banned words.</value>
+  <data name="delete">
+    <value>delete</value>
   </data>
-  <data name="settings_Disable_user">
-    <value>Specify the user to disable.</value>
+  <data name="language">
+    <value>Language</value>
   </data>
-  <data name="settings_Disable_ch">
-    <value>Specify the channel to disable.</value>
+  <data name="all">
+    <value>all</value>
   </data>
-  <data name="settings_BAN_word">
-    <value>Specify the banned word.</value>
+  <data name="help">
+    <value>help</value>
   </data>
-  <data name="message_not_permission">
-    <value>You don't have permission to use this command.</value>
+  <data name="ping">
+    <value>ping</value>
   </data>
-  <data name="message_notuser_is_user">
-    <value>You can't use this command for other users.</value>
+  <data name="invite">
+    <value>invite</value>
   </data>
-  <data name="message_not_removeMessage">
-    <value>You can't delete this message.</value>
+  <data name="support">
+    <value>support</value>
   </data>
-  <data name="message_user_ch_roll_only_pick">
-    <value>You must specify a user or channel or role.</value>
+  <data name="settings">
+    <value>settings</value>
   </data>
-  <data name="message_not_MultiOptions">
-    <value>You can't specify multiple options.</value>
+  <data name="disable">
+    <value>disable</value>
   </data>
-  <data name="message_not_permission_ManegeMessage">
-    <value>I don't have permission to manage messages.</value>
+  <data name="banWord">
+    <value>BAN Word</value>
   </data>
-  <data name="message_not_permission_DeleteMessage">
-    <value>I don't have permission to delete messages.</value>
+  <data name="user">
+    <value>user</value>
   </data>
-  <data name="message_Add_Disable_user">
-    <value>Added user to disable.user.</value>
+  <data name="channel">
+    <value>channel</value>
   </data>
-  <data name="message_Remove_Disable_user">
-    <value>Removed user from disable.user.</value>
-  </data>
-  <data name="message_Add_Disable_ch">
-    <value>Added channel to disable.channel.</value>
-  </data>
-  <data name="message_Remove_Disable_ch">
-    <value>Removed channel from disable.channel.</value>
-  </data>
-  <data name="message_Add_Disable_Roll">
-    <value>Added role to disable.role.</value>
-  </data>
-  <data name="message_Remove_Disable_Roll">
-    <value>Removed role from disable.role.</value>
-  </data>
-  <data name="message_Add_Disable_Word">
-    <value>Added word to bannedWords.</value>
-  </data>
-  <data name="message_Remove_Disable_Word">
-    <value>Removed word from bannedWords.</value>
-  </data>
-  <data name="settings_cantgood_option">
-    <value>You must specify a option.</value>
-  </data>
-  <data name="settings_translating_defaultLanguage">
-    <value>Sets the default language when translating.</value>
-  </data>
-  <data name="settings_translating_messageEdit_option">
-    <value>Sets whether to edit the original message when translating.</value>
-  </data>
-  <data name="BOT_Invite_Link">
-    <value>Invite me to your server!</value>
-  </data>
-  <data name="supportServer_Invite_Link">
-    <value>Join support server!</value>
-  </data>
-  <data name="settings_change">
-    <value>change Settings</value>
-  </data>
-  <data name="message_contains_BANWord">
-    <value>Your message contains a banned word.</value>
-  </data>
-  <data name="message_not_Remove_permission">
-    <value>I don't have permission to delete messages.</value>
-  </data>
-  <data name="settings_set_DefaultLanguage">
-    <value>Set default language to </value>
-  </data>
-  <data name="settings_editOriginalIfTranslate">
-    <value>Set editOriginalIfTranslate to </value>
-  </data>
-  <data name="message_cant_delete_otherMessage">
-    <value>You can't delete other users' messages.</value>
-  </data>
-  <data name="settings_show_media">
-    <value>Sets whether to show media as attachments.</value>
-  </data>
-  <data name="settings_send_OnlyTwitterLink_Delete">
-    <value>Sets whether to delete the message if only the tweet link is posted.</value>
-  </data>
-  <data name="settings_tweetLink_allow_reply">
-    <value>Sets whether to always reply if the tweet link is posted.</value>
-  </data>
-  <data name="settings_show_media_complete">
-    <value>Set sendMediaAsAttachmentsAsDefault to </value>
-  </data>
-  <data name="settings_send_OnlyTwitterLink_Delete_complete">
-    <value>Set deleteIfOnlyPostedTweetLink to </value>
-  </data>
-  <data name="settings_tweetLink_allow_reply_complete">
-    <value>Set alwaysReplyIfPostedTweetLink to </value>
-  </data>
-  <data name="Disable_All_Button">
-    <value>Disabled all buttons.</value>
-  </data>
-  <data name="Enable_All_Button">
-    <value>Enabled all buttons.</value>
-  </data>
-  <data name="settings_mediaFile_show_button_complete">
-    <value>Set showMediaAsAttachments button to </value>
-  </data>
-  <data name="settings_img_embed_show_button_complete">
-    <value>Set showAttachmentsAsEmbedsImage button to </value>
-  </data>
-  <data name="settings_Translate_button_complete">
-    <value>Set translate button to </value>
-  </data>
-  <data name="settings_delete_button_complete">
-    <value>Set delete button to </value>
-  </data>
-  <data name="settings_show_media_button_Disable_complete">
-    <value>Disabled showMediaAsAttachments button.</value>
-  </data>
-  <data name="settings_show_media_button_Enable_complete">
-    <value>Enabled showMediaAsAttachments button.</value>
-  </data>
-  <data name="settings_show_EmbedImg_button_Disable_complete">
-    <value>Disabled showAttachmentsAsEmbedsImage button.</value>
-  </data>
-  <data name="settings_show_EmbedImg_button_Enable_complete">
-    <value>Enabled showAttachmentsAsEmbedsImage button.</value>
-  </data>
-  <data name="settings_Translate_button_Disable_complete">
-    <value>Disabled translate button.</value>
-  </data>
-  <data name="settings_Translate_button_Enable_complete">
-    <value>Enabled translate button.</value>
-  </data>
-  <data name="settings_delete_button_Disable_complete">
-    <value>Disabled delete button.</value>
-  </data>
-  <data name="settings_delete_button_Enable_complete">
-    <value>Enabled delete button.</value>
-  </data>
-  <data name="settings_Add_Disable_button_user_complete">
-    <value>Added user to button_disabled.user.</value>
-  </data>
-  <data name="settings_Remove_Disable_button_user_complete">
-    <value>Removed user from button_disabled.user.</value>
-  </data>
-  <data name="settings_Add_Disable_button_ch_complete">
-    <value>Added channel to button_disabled.channel.</value>
-  </data>
-  <data name="settings_Remove_Disable_button_ch_complete">
-    <value>Removed channel from button_disabled.channel.</value>
-  </data>
-  <data name="settings_Add_Disable_button_Roll_complete">
-    <value>Added role to button_disabled.role.</value>
-  </data>
-  <data name="settings_Remove_Disable_button_Roll_complete">
-    <value>Removed role from button_disabled.role.</value>
-  </data>
-  <data name="settings_BOT_message_open">
-    <value>Sets whether to extract bot messages.</value>
-  </data>
-  <data name="settings_BOT_message_open_complete">
-    <value>Set extractBotMessage to </value>
-  </data>
-  <data name="message_translate_originalMessageEdit">
-    <value>edit original if translate</value>
-  </data>
-  <data name="Boolean">
-    <value>boolean</value>
-  </data>
-  <data name="show_media">
-    <value>show media as attachments</value>
-  </data>
-  <data name="only_tweetLink_to_DeleteMessage">
-    <value>delete if only posted tweetlink</value>
-  </data>
-  <data name="send_to_tweetLink_always_reply">
-    <value>always reply if posted tweetlink</value>
-  </data>
-  <data name="Button">
-    <value>button</value>
-  </data>
-  <data name="Invisible">
-    <value>invisible</value>
-  </data>
-  <data name="Disabled">
-    <value>disabled</value>
-  </data>
-  <data name="open_BOT_message">
-    <value>extract bot message</value>
-  </data>
-  <data name="show_embedImg">
-    <value>show attachments as embeds image</value>
-  </data>
-  <data name="settings_QuoteDoNot_Extract">
-    <value>Sets whether to expand quote retweets.</value>
-  </data>
-  <data name="settings_QuoteDoNot_Extract_name">
-    <value>Do not deploy quote retweets</value>
-  </data>
-  <data name="command_name_role_Locales">
+  <data name="role">
     <value>role</value>
   </data>
-  <data name="reload">
-    <value>reload</value>
+  <data name="word">
+    <value>word</value>
+  </data>
+  <data name="defaultLanguage">
+    <value>default language</value>
+  </data>
+  <data name="button">
+    <value>button</value>
+  </data>
+  <data name="invisible">
+    <value>invisible</value>
+  </data>
+  <data name="disabled">
+    <value>disabled</value>
+  </data>
+  <data name="boolean">
+    <value>boolean</value>
+  </data>
+  <data name="finishedAction">
+    <value>Finished action.</value>
+  </data>
+  <data name="showMediaInEmbedsImage">
+    <value>Show media in embeds image</value>
+  </data>
+  <data name="showMediaAsAttachments">
+    <value>show media as attachments</value>
+  </data>
+  <data name="showsHelpMessage">
+    <value>Shows help message.</value>
+  </data>
+  <data name="disableByUserOrChannel">
+    <value>Disable by user or channel.</value>
+  </data>
+  <data name="addOrRemoveBannedWords">
+    <value>Add or remove banned words.</value>
+  </data>
+  <data name="specifyTheUserToDisable">
+    <value>Specify the user to disable.</value>
+  </data>
+  <data name="specifyTheChannelToDisable">
+    <value>Specify the channel to disable.</value>
+  </data>
+  <data name="specifyTheBannedWord">
+    <value>Specify the banned word.</value>
+  </data>
+  <data name="youDonTHavePermissionToUseThisCommand">
+    <value>You don't have permission to use this command.</value>
+  </data>
+  <data name="youCanTUseThisCommandForOtherUsers">
+    <value>You can't use this command for other users.</value>
+  </data>
+  <data name="youCanTDeleteThisMessage">
+    <value>You can't delete this message.</value>
+  </data>
+  <data name="youMustSpecifyAUserOrChannelOrRole">
+    <value>You must specify a user or channel or role.</value>
+  </data>
+  <data name="youCanTSpecifyMultipleOptions">
+    <value>You can't specify multiple options.</value>
+  </data>
+  <data name="iDonTHavePermissionToManageMessages">
+    <value>I don't have permission to manage messages.</value>
+  </data>
+  <data name="iDonTHavePermissionToDeleteMessages">
+    <value>I don't have permission to delete messages.</value>
+  </data>
+  <data name="addedUserToDisableUser">
+    <value>Added user to disable.user.</value>
+  </data>
+  <data name="removedUserFromDisableUser">
+    <value>Removed user from disable.user.</value>
+  </data>
+  <data name="addedChannelToDisableChannel">
+    <value>Added channel to disable.channel.</value>
+  </data>
+  <data name="removedChannelFromDisableChannel">
+    <value>Removed channel from disable.channel.</value>
+  </data>
+  <data name="addedRoleToDisableRole">
+    <value>Added role to disable.role.</value>
+  </data>
+  <data name="removedRoleFromDisableRole">
+    <value>Removed role from disable.role.</value>
+  </data>
+  <data name="addedWordToBannedWords">
+    <value>Added word to bannedWords.</value>
+  </data>
+  <data name="removedWordFromBannedWords">
+    <value>Removed word from bannedWords.</value>
+  </data>
+  <data name="youMustSpecifyAOption">
+    <value>You must specify a option.</value>
+  </data>
+  <data name="setsTheDefaultLanguageWhenTranslating">
+    <value>Sets the default language when translating.</value>
+  </data>
+  <data name="setsWhetherToEditTheOriginalMessageWhenTranslating">
+    <value>Sets whether to edit the original message when translating.</value>
+  </data>
+  <data name="inviteMeToYourServer">
+    <value>Invite me to your server!</value>
+  </data>
+  <data name="joinSupportServer">
+    <value>Join support server!</value>
+  </data>
+  <data name="changeSettings">
+    <value>change Settings</value>
+  </data>
+  <data name="yourMessageContainsABannedWord">
+    <value>Your message contains a banned word.</value>
+  </data>
+  <data name="setDefaultLanguageTo">
+    <value>Set default language to </value>
+  </data>
+  <data name="setEditOriginalIfTranslateTo">
+    <value>Set editOriginalIfTranslate to </value>
+  </data>
+  <data name="youCanTDeleteOtherUsers' Messages">
+    <value>You can't delete other users' messages.</value>
+  </data>
+  <data name="setsWhetherToShowMediaAsAttachments">
+    <value>Sets whether to show media as attachments.</value>
+  </data>
+  <data name="setsWhetherToDeleteTheMessageIfOnlyTheTweetLinkIsPosted">
+    <value>Sets whether to delete the message if only the tweet link is posted.</value>
+  </data>
+  <data name="setsWhetherToAlwaysReplyIfTheTweetLinkIsPosted">
+    <value>Sets whether to always reply if the tweet link is posted.</value>
+  </data>
+  <data name="setsEndMediaAsAttachmentsAsDefaultTo">
+    <value>Set sendMediaAsAttachmentsAsDefault to </value>
+  </data>
+  <data name="setDEleteIfOnlyPostedTweetLinkTo">
+    <value>Set deleteIfOnlyPostedTweetLink to </value>
+  </data>
+  <data name="setALwaysReplyIfPostedTweetLinkTo">
+    <value>Set alwaysReplyIfPostedTweetLink to </value>
+  </data>
+  <data name="disabledAllButtons">
+    <value>Disabled all buttons.</value>
+  </data>
+  <data name="enabledAllButtons">
+    <value>Enabled all buttons.</value>
+  </data>
+  <data name="setShowMediaAsAttachmentsButtonTo">
+    <value>Set showMediaAsAttachments button to </value>
+  </data>
+  <data name="setsHowAttachmentsAsEmbedsImageButtonTo">
+    <value>Set showAttachmentsAsEmbedsImage button to </value>
+  </data>
+  <data name="setTranslateButtonTo">
+    <value>Set translate button to </value>
+  </data>
+  <data name="setDeleteButtonTo">
+    <value>Set delete button to </value>
+  </data>
+  <data name="disabledShowMediaAsAttachmentsButton">
+    <value>Disabled showMediaAsAttachments button.</value>
+  </data>
+  <data name="enabledShowMediaAsAttachmentsButton">
+    <value>Enabled showMediaAsAttachments button.</value>
+  </data>
+  <data name="disabledsHowAttachmentsAsEmbedsImageButton">
+    <value>Disabled showAttachmentsAsEmbedsImage button.</value>
+  </data>
+  <data name="enabledsHowAttachmentsAsEmbedsImageButton">
+    <value>Enabled showAttachmentsAsEmbedsImage button.</value>
+  </data>
+  <data name="disabledTranslateButton">
+    <value>Disabled translate button.</value>
+  </data>
+  <data name="enabledTranslateButton">
+    <value>Enabled translate button.</value>
+  </data>
+  <data name="disabledDeleteButton">
+    <value>Disabled delete button.</value>
+  </data>
+  <data name="enabledDeleteButton">
+    <value>Enabled delete button.</value>
+  </data>
+  <data name="addedUserToButtonDisabledUser">
+    <value>Added user to button_disabled.user.</value>
+  </data>
+  <data name="removedUserFromButtonDisabledUser">
+    <value>Removed user from button_disabled.user.</value>
+  </data>
+  <data name="addedChannelToButtonDisabledChannel">
+    <value>Added channel to button_disabled.channel.</value>
+  </data>
+  <data name="removedChannelFromButtonDisabledChannel">
+    <value>Removed channel from button_disabled.channel.</value>
+  </data>
+  <data name="addedRoleToButtonDisabledRole">
+    <value>Added role to button_disabled.role.</value>
+  </data>
+  <data name="removedRoleFromButtonDisabledRole">
+    <value>Removed role from button_disabled.role.</value>
+  </data>
+  <data name="setsWhetherToExtractBotMessages">
+    <value>Sets whether to extract bot messages.</value>
+  </data>
+  <data name="setExtractBotMessageTo">
+    <value>Set extractBotMessage to </value>
+  </data>
+  <data name="editOriginalIfTranslate">
+    <value>edit original if translate</value>
+  </data>
+  <data name="deleteIfOnlyPostedTweetlink">
+    <value>delete if only posted tweetlink</value>
+  </data>
+  <data name="alwaysReplyIfPostedTweetlink">
+    <value>always reply if posted tweetlink</value>
+  </data>
+  <data name="extractBotMessage">
+    <value>extract bot message</value>
+  </data>
+  <data name="showAttachmentsAsEmbedsImage">
+    <value>show attachments as embeds image</value>
+  </data>
+  <data name="setsWhetherToExpandQuoteRetweets">
+    <value>Sets whether to expand quote retweets.</value>
+  </data>
+  <data name="doNotDeployQuoteRetweets">
+    <value>Do not deploy quote retweets</value>
   </data>
 </root>
